--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -27,6 +27,7 @@
 
   <body>
     <h1>JavaScript Fundamentals – Part 1</h1>
-    <script src="./script.js"></script>
+    <script src="./scripts/script.js"></script>
+    <script src="./scripts/challenge.js""></script>
   </body>
 </html>
