--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -28,6 +28,7 @@
   <body>
     <h1>JavaScript Fundamentals – Part 1</h1>
     <script src="./scripts/challenge.js""></script>
+    <script src="./scripts/challengeTwo.js""></script>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
