--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -27,9 +27,9 @@
 
   <body>
     <h1>JavaScript Fundamentals – Part 1</h1>
-    <script src="./scripts/challenge3.js""></script>
+    <!-- <script src="./scripts/challenge3.js""></script>
     <script src="./scripts/challenge4.js""></script>
-    <script src="./scripts/challenge.js""></script>
+    <script src="./scripts/challenge.js""></script> -->
     <script src="./scripts/script.js"></script>
   </body>
 </html>
