--- a/09-Data-Structures-Operators/starter/index.html
+++ b/09-Data-Structures-Operators/starter/index.html
@@ -36,5 +36,6 @@
     <h1>Data Structures and Modern Operators</h1>
     <script src="script.js"></script>
     <!-- <script src="challenge1.js"></script> -->
+    <script src="challenge2.js"></script>
   </body>
 </html>
