--- a/09-Data-Structures-Operators/starter/index.html
+++ b/09-Data-Structures-Operators/starter/index.html
@@ -38,5 +38,6 @@
     <!-- <script src="challenge1.js"></script> -->
     <!-- <script src="challenge1b.js"></script> -->
     <!-- <script src="challenge1.js"></script> -->
+    <script src="challenge3.js"></script>
   </body>
 </html>
