--- a/09-Data-Structures-Operators/starter/index.html
+++ b/09-Data-Structures-Operators/starter/index.html
@@ -34,11 +34,12 @@
   </head>
   <body>
     <h1>Data Structures and Modern Operators</h1>
-    <script src="script.js"></script>
-    <script src="strings.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <!-- <script src="strings.js"></script> -->
     <!-- <script src="challenge1.js"></script> -->
     <!-- <script src="challenge1b.js"></script> -->
     <!-- <script src="challenge1.js"></script> -->
     <!-- <script src="challenge3.js"></script> -->
+    <script src="challenge4.js"></script>
   </body>
 </html>
