--- a/11-Arrays-Bankist/starter/index.html
+++ b/11-Arrays-Bankist/starter/index.html
@@ -124,6 +124,6 @@
     </footer> -->
 
     <script src="script.js"></script>
-    <script src="arrays.js"></script>
+    <!-- <script src="arrays.js"></script> -->
   </body>
 </html>
