First challenge done

--- a/11-Arrays-Bankist/starter/index.html
+++ b/11-Arrays-Bankist/starter/index.html
@@ -124,6 +124,7 @@
     </footer> -->
 
     <script src="script.js"></script>
+    <script src="challenge1.js"></script>
     <!-- <script src="arrays.js"></script> -->
   </body>
 </html>
