--- a/11-Arrays-Bankist/starter/index.html
+++ b/11-Arrays-Bankist/starter/index.html
@@ -126,6 +126,6 @@
     <script src="script.js"></script>
     <!-- <script src="challenge1.js"></script> -->
     <!-- <script src="challenge2.js"></script> -->
-    <script src="arrays.js"></script>
+    <!-- <script src="arrays.js"></script> -->
   </body>
 </html>
