--- a/14-OOP/starter/index.html
+++ b/14-OOP/starter/index.html
@@ -22,7 +22,7 @@
         color: white;
       }
     </style>
-    <script defer src="script.js"></script>
+    <!-- <script defer src="script.js"></script> -->
     <!-- <script defer src="challenge1.js"></script> -->
     <!-- <script defer src="challenge2.js"></script> -->
     <!-- <script defer src="challenge3.js"></script> -->
