--- a/13-Advanced-DOM-Bankist/starter/index.html
+++ b/13-Advanced-DOM-Bankist/starter/index.html
@@ -328,7 +328,8 @@
           class="footer__link twitter-link"
           target="_blank"
           href="https://twitter.com/jonasschmedtman"
-          >Jonas Schmedtmann</a
+          >Jonas Schmedtmann-Teacher(styles/css) - J.Alberto
+          Delgado(javascript)</a
         >. Use for learning or your portfolio. Don't use to teach. Don't claim
         as your own product.
       </p>
