--- a/15-Mapty/starter/index.html
+++ b/15-Mapty/starter/index.html
@@ -124,9 +124,10 @@
           class="twitter-link"
           target="_blank"
           href="https://twitter.com/jonasschmedtman"
-          >Jonas Schmedtmann</a
+          >Jonas Schmedtmann-Teacher(styles/css) - J.Alberto
+          Delgado(javascript)</a
         >. Use for learning or your portfolio. Don't use to teach. Don't claim
-        as your own.
+        as your own product.
       </p>
     </div>
 
