Added link to repo in my name

--- a/15-Mapty/starter/index.html
+++ b/15-Mapty/starter/index.html
@@ -124,8 +124,14 @@
           class="twitter-link"
           target="_blank"
           href="https://twitter.com/jonasschmedtman"
-          >Jonas Schmedtmann-Teacher(styles/css) - J.Alberto
-          Delgado(javascript)</a
+          >Jonas Schmedtmann-Teacher(styles/css)</a
+        >
+        -
+        <a
+          class="twitter-link"
+          target="_blank"
+          href="https://github.com/JoseAlbDR/completeJavascriptCourse/tree/master/15-Mapty/starter"
+          >J.Alberto Delgado(javascript)</a
         >. Use for learning or your portfolio. Don't use to teach. Don't claim
         as your own product.
       </p>
